--- a/src/app/shop/templates/product-list.component.html
+++ b/src/app/shop/templates/product-list.component.html
@@ -1,1 +1,49 @@
-<p>product-list works!</p>
+<section class="owl-carousel active-product-area section_gap">
+    <!-- single product slide -->
+    <div class="single-product-slider" >
+        <div class="container">
+            <div class="row justify-content-center" >
+                <div class="col-lg-6 text-center">
+                    <div class="section-title">
+                        <!-- <h1>{{ products }}</h1> -->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore
+                            magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row" >
+              
+                <div class="col-lg-3 col-md-6" *ngFor="let product of products">
+                    <div class="single-product">
+                        <img class="img-fluid" [src]=" url+'public/uploads/'+ product.image" alt="">
+                        <div class="product-details">
+                            <h6>{{product.name}}</h6>
+                            <div class="price">
+                                <h6>{{product.price}}</h6>
+                                <h6 class="l-through">{{product.price + (20/100)*product.price}}</h6>
+                            </div>
+                            <div class="prd-bottom">
+
+                                <a href="" class="social-info">
+                                    <span class="ti-bag"></span>
+                                    <p class="hover-text">Giỏ hàng</p>
+                                </a>
+                                <a href="" class="social-info">
+                                    <span class="lnr lnr-heart"></span>
+                                    <p class="hover-text">Yêu thích</p>
+                                </a>
+                                <a href="" class="social-info">
+                                    <span class="lnr lnr-move"></span>
+                                    <p class="hover-text">Chi tiết</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              
+            </div>
+        </div>
+    </div>
+   
+</section>
