--- a/src/app/shop/templates/product-list.component.html
+++ b/src/app/shop/templates/product-list.component.html
@@ -26,10 +26,8 @@
                             </div>
                             <div class="prd-bottom">
 
-                                <a href="" class="social-info">
-                                    <span class="ti-bag"></span>
-                                    <a class="hover-text" (click)="addToCart(product.id)">Giỏ hàng</a>
-                                </a>
+                                    <a class="hover-text" (click)="addToCart(product.id)">Thêm vào giỏ hàng</a>
+                                    
                                 <a href="" class="social-info">
                                     <span class="lnr lnr-heart"></span>
                                     <p class="hover-text">Yêu thích</p>
