--- a/src/app/shop/templates/product-list.component.html
+++ b/src/app/shop/templates/product-list.component.html
@@ -21,13 +21,11 @@
                             <div class="product-details">
                                 <h6>{{product.name}}</h6>
                                 <div class="price">
-                                <h6>{{product.price}}</h6>
-                                <h6 class="l-through">{{product.price + (20/100)*product.price}}</h6>
+                                <h6>{{product.price| number}} VNĐ</h6>
+                                <h6 class="l-through">{{product.price + (20/100)*product.price| number}} VNĐ</h6>
                             </div>
                             <div class="prd-bottom">
-
-                                    <a class="hover-text" (click)="addToCart(product.id)">Thêm vào giỏ hàng</a>
-                                    
+                                    <a class="ti-bag" (click)="addToCart(product.id)"></a>  <br>
                                 <a href="" class="social-info">
                                     <span class="lnr lnr-heart"></span>
                                     <p class="hover-text">Yêu thích</p>
