--- a/src/app/shop/templates/home.component.html
+++ b/src/app/shop/templates/home.component.html
@@ -9,8 +9,8 @@
                         <div class="col-lg-5 col-md-6">
                             <div class="banner-content">
                                 <h1>TT<br>Flute</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                <p>Sáo Trúc Thanh Trường Official Website<br>
+                                    MUA BÁN SÁO TRÚC CHUYÊN NGHIỆP, SÁO TRÚC CAO CẤP SỐ 1 VIỆT NAM</p>
                                 <div class="add-bag d-flex align-items-center">
                                     <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
                                     <span class="add-text text-uppercase">Add to Bag</span>
