--- a/src/app/shop/templates/order-detail.component.html
+++ b/src/app/shop/templates/order-detail.component.html
@@ -1,148 +1,81 @@
-
-	<!-- Start Banner Area -->
-	<section class="banner-area organic-breadcrumb">
-		<div class="container">
-			<div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
-				<div class="col-first">
-					<h1>Confirmation</h1>
-					<nav class="d-flex align-items-center">
-						<a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-						<a href="category.html">Confirmation</a>
-					</nav>
+<style>
+	table,
+	td,
+	div,
+	h1,
+	p {
+		font-family: Arial, sans-serif;
+	}
+</style>
+<br><br><br><br><br><br>
+<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;background:#ffffff;">
+	<tr>
+		<td align="center" style="padding:0;">
+			<table role="presentation"
+				style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">
+				<div style="text-align:center;">
+					<img src="assets/img/logo.png" alt="" width="260" />
 				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
+				<tr>
+					<td style="padding:36px 30px 42px 30px;">
+						<table role="presentation"
+							style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
+							<h1 style="text-align:center;">Đơn hàng của bạn đã được lưu vào hệ thống</h1>
+							<h4 style="color: rgb(24, 67, 255); text-align:center;">Chúng tôi sẽ sớm liên hệ với bạn
+								để xác nhận đơn
+								hàng!</h4>
+							<tr>
+								<td style="padding:0 0 36px 0;color:#153643;">
 
-	<!--================Order Details Area =================-->
-	<section class="order_details section_gap">
-		<div class="container">
-			<h3 class="title_confirmation">Thank you. Your order has been received.</h3>
-			<div class="row order_d_inner">
-				<div class="col-lg-4">
-					<div class="details_item">
-						<h4>Order Info</h4>
-						<ul class="list">
-							<li><a href="#"><span>Order number</span> : 60235</a></li>
-							<li><a href="#"><span>Date</span> : Los Angeles</a></li>
-							<li><a href="#"><span>Total</span> : USD 2210</a></li>
-							<li><a href="#"><span>Payment method</span> : Check payments</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="details_item">
-						<h4>Billing Address</h4>
-						<ul class="list">
-							<li><a href="#"><span>Street</span> : 56/8</a></li>
-							<li><a href="#"><span>City</span> : Los Angeles</a></li>
-							<li><a href="#"><span>Country</span> : United States</a></li>
-							<li><a href="#"><span>Postcode </span> : 36952</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="details_item">
-						<h4>Shipping Address</h4>
-						<ul class="list">
-							<li><a href="#"><span>Street</span> : 56/8</a></li>
-							<li><a href="#"><span>City</span> : Los Angeles</a></li>
-							<li><a href="#"><span>Country</span> : United States</a></li>
-							<li><a href="#"><span>Postcode </span> : 36952</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="order_details_table">
-				<h2>Order Details</h2>
-				<div class="table-responsive">
-					<table class="table">
-						<thead>
-							<tr>
-								<th scope="col">Product</th>
-								<th scope="col">Quantity</th>
-								<th scope="col">Total</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>
-									<p>Pixelstore fresh Blackberry</p>
-								</td>
-								<td>
-									<h5>x 02</h5>
-								</td>
-								<td>
-									<p>$720.00</p>
+									<p
+										style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">
 								</td>
 							</tr>
-							<tr>
-								<td>
-									<p>Pixelstore fresh Blackberry</p>
-								</td>
-								<td>
-									<h5>x 02</h5>
-								</td>
-								<td>
-									<p>$720.00</p>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<p>Pixelstore fresh Blackberry</p>
-								</td>
-								<td>
-									<h5>x 02</h5>
-								</td>
-								<td>
-									<p>$720.00</p>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<h4>Subtotal</h4>
-								</td>
-								<td>
-									<h5></h5>
-								</td>
-								<td>
-									<p>$2160.00</p>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<h4>Shipping</h4>
-								</td>
-								<td>
-									<h5></h5>
-								</td>
-								<td>
-									<p>Flat rate: $50.00</p>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<h4>Total</h4>
-								</td>
-								<td>
-									<h5></h5>
-								</td>
-								<td>
-									<p>$2210.00</p>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================End Order Details Area =================-->
+							<br>
+							<p>
+								TT Flute rất cảm ơn bạn vì đã đặt hàng và ủng hộ cửa hàng! Trong trường hợp còn điều
+								gì đó khiến bạn chưa hài lòng, bạn vui lòng quay video hoặc chụp ảnh lại gói hàng
+								cùng với sản phẩm nhận được, sau đó gửi hình và mô tả vấn đề của bạn thông qua INBOX
+								cho SHOP nhé.
+							</p>
+							<h3>Trân Trọng!</h3>
 
-	
-
-
-
-
-	
+						</table>
+					</td>
+				</tr>
+				<tr>
+					<td style="padding:30px;background:#ebe2e2;">
+						<table role="presentation"
+							style="width:100%;border-collapse:collapse;border:0;border-spacing:0;font-size:9px;font-family:Arial,sans-serif;">
+							<tr>
+								<td style="padding:0;width:50%;" align="left">
+									<p
+										style="margin:0;font-size:14px;line-height:16px;font-family:Arial,sans-serif;color:#141313;">
+										&reg; TTFlute-Shop, limited 2023<br />
+									</p>
+								</td>
+								<td style="padding:0;width:50%;" align="right">
+									<table role="presentation"
+										style="border-collapse:collapse;border:0;border-spacing:0;">
+										<tr>
+											<td style="padding:0 0 0 10px;width:38px;">
+												<a href="http://www.twitter.com/" style="color:#ffffff;"><img
+														src="https://assets.codepen.io/210284/tw_1.png" alt="Twitter"
+														width="38" style="height:auto;display:block;border:0;" /></a>
+											</td>
+											<td style="padding:0 0 0 10px;width:38px;">
+												<a href="http://www.facebook.com/" style="color:#ffffff;"><img
+														src="https://assets.codepen.io/210284/fb_1.png" alt="Facebook"
+														width="38" style="height:auto;display:block;border:0;" /></a>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+</table><br><br>
