--- a/src/app/shop/templates/home.component.html
+++ b/src/app/shop/templates/home.component.html
@@ -1,4 +1,5 @@
-	<!-- start banner Area -->
+<!-- start banner Area -->
+
 <section class="banner-area">
     <div class="container">
         <div class="row fullscreen align-items-center justify-content-start">
@@ -24,7 +25,7 @@
                         </div>
                     </div>
                     <!-- single-slide -->
-                  
+
                 </div>
             </div>
         </div>
@@ -86,18 +87,20 @@
 <!-- start product Area -->
 <section class="owl-carousel active-product-area section_gap">
     <!-- single product slide -->
-    <div class="single-product-slider" >
+    <div class="single-product-slider">
         <div class="container">
-            <div class="row justify-content-center" >
+            <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
                     <div class="section-title">
                         <h1>Latest Products</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et
                             dolore
                             magna aliqua.</p>
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <!-- single product -->
                 <div class="col-lg-3 col-md-6">
@@ -365,6 +368,7 @@
             </div>
         </div>
     </div>
+
     <!-- single product slide -->
     <div class="single-product-slider">
         <div class="container">
@@ -372,7 +376,8 @@
                 <div class="col-lg-6 text-center">
                     <div class="section-title">
                         <h1>Coming Products</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et
                             dolore
                             magna aliqua.</p>
                     </div>
@@ -754,7 +759,8 @@
             <div class="col-lg-6 text-center">
                 <div class="section-title">
                     <h1>Deals of the Week</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore
                         magna aliqua.</p>
                 </div>
             </div>
