--- a/src/app/shop/templates/product-list.component.html
+++ b/src/app/shop/templates/product-list.component.html
@@ -1,31 +1,38 @@
 <section class="owl-carousel active-product-area section_gap">
     <!-- single product slide -->
-    <div class="single-product-slider" >
+    <div class="single-product-slider">
         <div class="container">
-            <div class="row justify-content-center" >
+            <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
                     <div class="section-title">
                         <!-- <h1>{{ products }}</h1> -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et
                             dolore
                             magna aliqua.</p>
-                        </div>
                     </div>
                 </div>
-                <div class="row" >
-                    
-                    <!-- <h1>234567890</h1> -->
-                    <div class="col-lg-3 col-md-6" *ngFor="let product of products">
-                        <div class="single-product">
-                            <img class="img-fluid" [src]=" url+'public/uploads/'+ product.image" alt="">
-                            <div class="product-details">
-                                <h6>{{product.name}}</h6>
-                                <div class="price">
+            </div>
+            <div class="row">
+                <!-- CSS SỔ ẢNH  -->
+                <style>
+                    img.img-fluid {
+                        width: 250px;
+                        height: 250px;
+                    }
+                </style>
+                <!-- <h1>234567890</h1> -->
+                <div class="col-lg-3 col-md-6" *ngFor="let product of products">
+                    <div class="single-product">
+                        <img class="img-fluid" [src]=" url+'public/uploads/'+ product.image" alt="">
+                        <div class="product-details">
+                            <h6>{{product.name}}</h6>
+                            <div class="price">
                                 <h6>{{product.price| number}} VNĐ</h6>
                                 <h6 class="l-through">{{product.price + (20/100)*product.price| number}} VNĐ</h6>
                             </div>
                             <div class="prd-bottom">
-                                    <a class="ti-bag" (click)="addToCart(product.id)"></a>  <br>
+                                <a class="ti-bag" (click)="addToCart(product.id)"></a> <br>
                                 <a href="" class="social-info">
                                     <span class="lnr lnr-heart"></span>
                                     <p class="hover-text">Yêu thích</p>
@@ -38,9 +45,9 @@
                         </div>
                     </div>
                 </div>
-              
+
             </div>
         </div>
     </div>
-   
+
 </section>
